@@ -57,6 +57,8 @@
 31. Removed the '-DQTC_REORDER_GTK_DIALOG_BUTTONS=true' cmake option, and replaced
     with a config option.
 32. Draw Preview button in GIMP file dialog as a listview header.
+33. Fix crashes with 'deadbeef' (??) 0.3.1 - need to check widget pointer before
+    calling GTK_WIDGET_??? macros.
 
 0.69.2
 ------
